test/pos/poly_inst.msmt_
; Sorts


; Constants




; Uninterpreted Functions
(declare-fun mkEmp (Int) @a0)

; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((_VV##0 Int)(punk Int)(junk Bool)) (=> (and (= junk (mkEmp 0)) (and (= punk (mkEmp 0)) (= _VV##0 (mkEmp 10)))) (= _VV##0 (mkEmp 10)))))

