test/neg/poly2.msmt_
; Sorts
(declare-sort BitVec 1)
(declare-sort Size32 0)

; Constants




; Uninterpreted Functions
(declare-fun offset (@a0 Int Int @a0) @a1)

; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((_VV##1 (BitVec Size32))(x (BitVec Size32))(_VV (BitVec Size32))) (=> (and (= _VV (offset 0 0 0 0)) (= _VV##1 x)) (not (= _VV##1 x)))))

